Fixed scrolling jumping

--- a/css/main.css
+++ b/css/main.css
@@ -89,6 +89,10 @@ a {
   margin-top: 100px;
 }
 
+.pageMargin {
+  margin-top: 100px;
+}
+
 /* Timeline */
 
 .timeline {
